Finalize android app setup

--- a/ios/books/Info.plist
+++ b/ios/books/Info.plist
@@ -51,6 +51,16 @@
       <key>NSAllowsLocalNetworking</key>
       <true/>
     </dict>
+    <key>NSUserActivityTypes</key>
+    <array>
+      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
+    </array>
+    <key>UIAppFonts</key>
+    <array>
+      <string>NunitoSans_700.ttf</string>
+      <string>NunitoSans_600.ttf</string>
+      <string>GeorgiaItalic_700.ttf</string>
+    </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
